syntax = "proto3";

package stats.message.action;

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.proto";

message InteractionsCountRequestProto {
  repeated int64 eventId = 1;
}
