syntax = "proto3";

package stats.message.action;

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.proto";

message RecommendedEventProto {
  int64 eventId = 1;
  double score = 2;
}
