syntax = "proto3";

package stats.message.action;

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.proto";

message SimilarEventsRequestProto {
  int64 eventId = 1;
  int64 user_id = 2;
  int32 max_results = 3;
}
