syntax = "proto3";

package stats.message.action;

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.proto";

message UserPredictionsRequestProto {
  int64 user_id = 1;
  int32 max_results = 2;
}
